# InkStream

./: .gitignore  LICENSE  PRD.md  README.md  ROADMAP.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: academic.md  creative.md  diff-merge.md  editor.md  export.md  git.md  github.md  graph.md  index.md  links.md  math.md  modes.md  reading.md  shortcuts.md  simple-mode.md  update.md  writing.md
patches/: @codemirror__view@6.43.1.patch
public/: boot.js
scripts/: dev-148.sh
specs/: 01-workbench.spec.md  03-live-preview-ime.spec.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bookshelf.rs  files.rs  ime_focus.rs  ime_trace.rs  index.rs  index_schema.sql  lib.rs  main.rs  os_open.rs  pandoc.rs  path_guard.rs  terminal.rs  vault.rs  watcher.rs  window_guard.rs  zotero.rs  zotero_sync.rs
src-tauri/src/git/: auth.rs  branch.rs  commit.rs  conflict.rs  diff.rs  log.rs  mod.rs  pr.rs  refops.rs  refs.rs  remote.rs  stash.rs  status.rs  tests.rs  types.rs
src/bookshelf/: detectStructure.test.ts  detectStructure.ts  epubCover.ts  exitReading.ts  importBooks.ts  openBook.ts  placeholderCover.ts
src/commands/: academicCommands.ts  bookshelfCommands.ts  builtins.test.ts  builtins.ts  coreCommands.ts  exportCommands.ts  gitCommands.ts  keymap.test.ts  keymap.ts  match.test.ts  match.ts  mru.test.ts  mru.ts  registry.test.ts  registry.ts  textCommands.ts  viewCommands.ts
src/components/bookshelf/: BookCard.tsx  BookshelfView.tsx
src/components/common/: AboutDialog.tsx  Celebration.tsx  ChoiceDialog.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  EmptyState.tsx  Kbd.tsx  Menu.tsx  PromptDialog.tsx  Toast.test.tsx  Toast.tsx  UpdateDialog.tsx  WhatsNewDialog.tsx  WritingHud.test.tsx  WritingHud.tsx  celebration.css  menu.css  toast.css
src/components/dev/: ImeProbe.test.tsx  ImeProbe.tsx  ProbeZone.tsx  cmContentAttrs.ts  imeMitigations.test.ts  imeMitigations.ts  imeProbeCommand.ts  imeProbeZones.ts  relayZoneM.test.ts  relayZoneM.ts  textareaRelayM.ts  useEventLog.ts  useImeProbeStore.ts
src/components/git/: BranchFilter.tsx  BranchManager.tsx  CommentThread.tsx  CommitDetailPanel.tsx  DiffHunkView.tsx  FileDiffPanel.tsx  GitContextMenu.tsx  GitGraphView.tsx  IssuePanel.tsx  MergeResolver.tsx  PrDetailPanel.tsx  ProseDiffView.tsx  PullRequestPanel.tsx  RepoSettings.tsx
src/components/help/: HelpModal.tsx  helpContent.tsx  helpFeatures.tsx  helpPrimitives.tsx
src/components/multibuffer/: ExcerptEditor.tsx  ProjectSearchView.test.tsx  ProjectSearchView.tsx  multibuffer.css
src/components/onboarding/: OnboardingOverlay.tsx
src/components/palette/: CommandPalette.test.tsx  CommandPalette.tsx  PaletteInput.tsx  PaletteList.tsx  PaletteRow.tsx  contentProvider.ts  fileProvider.test.ts  fileProvider.ts  headingProvider.test.ts  headingProvider.ts  palette.css
src/components/reading/: HtmlReader.security.test.ts  HtmlReader.tsx  PdfReader.tsx  ReadingView.tsx
src/components/settings/: SettingsModal.tsx  settingsSections.tsx
src/components/terminal/: TerminalDock.tsx  TerminalPanel.test.tsx  TerminalPanel.tsx
src/data/: changelog.test.ts  changelog.ts
src/diff/: parseConflicts.test.ts  parseConflicts.ts  proseDiff.test.ts  proseDiff.ts
src/editor/: academicActions.test.ts  academicActions.ts  bibliography.test.ts  bibliography.ts  chapterTree.test.ts  chapterTree.ts  citations.test.ts  citations.ts  codex.test.ts  codex.ts  composition.regression.test.ts  composition.test.ts  composition.ts  cslFormat.test.ts  cslFormat.ts  draftFlow.test.ts  draftFlow.ts  draftPath.test.ts  draftPath.ts  editCommands.test.ts  editCommands.ts  editorState.renderMode.test.ts  editorState.renderMode.ts  editorState.test.ts  editorState.ts  exitGuard.test.ts  exitGuard.ts  extensions.test.ts  extensions.ts  externalChange.test.ts  externalChange.ts  fileOpenFlow.test.ts  fileOpenFlow.ts  fileTreeData.test.ts  fileTreeData.ts  frontmatter.test.ts  frontmatter.ts  gitActions.test.ts  gitActions.ts  highlightTheme.test.ts  (+31 more)
src/graph/: GraphCanvas.tsx  buildGraph.test.ts  buildGraph.ts  forceWorker.ts  graphClient.ts  render.test.ts  render.ts  types.ts
src/ipc/: README.md  app.ts  asset.ts  dialog.test.ts  dialog.ts  events.ts  files.ts  git.ts  indexService.test.ts  indexService.ts  invoke.ts  opener.test.ts  opener.ts  pandoc.ts  platform.ts  settings.ts  terminal.test.ts  terminal.ts  theme.ts  updater.test.ts  updater.ts  vault.ts  window.test.ts  window.ts  zoom.ts  zotero.ts
src/lib/: wordCount.test.ts  wordCount.ts
src/modes/: capabilities.test.ts  capabilities.ts  presets.test.ts  presets.ts  totalAssembly.test.ts
src/stores/: autosave.regression.test.ts  autosave.test.ts  autosave.ts  persistBookshelf.ts  persistSettings.test.ts  persistSettings.ts  persistVault.test.ts  persistVault.ts  useAboutStore.ts  useBookshelfStore.ts  useChapterTreeStore.ts  useChoiceStore.ts  useCitationStore.ts  useCodexStore.ts  useConfirmStore.ts  useContentSearchStore.test.ts  useContentSearchStore.ts  useEditorStore.test.ts  useEditorStore.ts  useFocusModeStore.ts  useGitGraphStore.ts  useGitGuidanceStore.ts  useGitStore.ts  useHelpStore.ts  useOnboardingStore.ts  useOpenFolderStore.ts  useOutlineStore.ts  usePaletteStore.ts  usePandocStore.ts  useProjectSearchStore.test.ts  useProjectSearchStore.ts  usePromptStore.ts  useReadingStore.ts  useSceneSummaryStore.ts  useSettingsStore.test.ts  useSettingsStore.ts  useSettingsUiStore.ts  useToastStore.ts  useTypewriterStore.ts  useUpdaterStore.test.ts  (+15 more)
src/styles/: app.css  base.css  contrast.test.ts  contrast.ts  git-graph.css  theme.css  theme.test.ts
src/test/: composition.test.ts  composition.ts  setup.ts
src/types/: bookshelf.ts  commands.ts  creative.ts  editor.ts  export.ts  git.ts  ipc.ts  reading.ts  settings.ts  vault.ts  workbench.ts  zotero.ts
(+212 files in other folders)
