[package]
name = "inkstream"
version = "0.1.0"
description = "InkStream desktop writing application"
edition = "2021"

[lib]
name = "inkstream_lib"
# 仅 rlib：桌面端 main.rs 经 rlib 链接即可。cdylib/staticlib 为移动端
# （iOS/Android）所需，本项目不在范围；且 gnu 工具链 ld 对 cdylib 全量导出
# 报 "export ordinal too large"（>65535 导出上限），保留会阻断 build/test。
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
# protocol-asset：assetProtocol enable 的编译期 feature 门，与 tauri.conf.json
# app.security.assetProtocol 对齐（缺则 tauri-build allowlist 校验失败，本地图
# 经 asset:// 协议加载所必需）。
tauri = { version = "=2.11.2", features = ["protocol-asset"] }
tauri-plugin-window-state = "=2.4.1"
tauri-plugin-store = "=2.4.3"
tauri-plugin-fs = "=2.5.1"
# 外链打开窄通道（RESEARCH Q2）。Tauri 官方 plugins-workspace 一方插件，
# 专责 open，capability 仅授 opener:allow-open-url，权限比 tauri-plugin-shell
# 更窄。来源/版本经 Task 1 阻塞门人工核验通过（crates.io 官方 workspace，精确 pin）。
tauri-plugin-opener = "=2.5.4"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
# 回收站删除（D-09）。Byron/trash-rs，跨平台。build.rs 审查见 02-03-SUMMARY。
trash = "=5.2.6"
# 防抖文件监听（FILE-02 watcher）。内捆 notify 7.x；裸 notify 不显式 pin，
# 经 notify_debouncer_full::notify 重导出访问类型（Pitfall 6，避免双 pin 冲突）。
notify-debouncer-full = "=0.7.0"
