[package]
name = "inkstream"
version = "1.1.0"
description = "InkStream desktop writing application"
edition = "2021"

[lib]
name = "inkstream_lib"
# 仅 rlib：桌面端 main.rs 经 rlib 链接即可。cdylib/staticlib 为移动端
# （iOS/Android）所需，本项目不在范围；且 gnu 工具链 ld 对 cdylib 全量导出
# 报 "export ordinal too large"（>65535 导出上限），保留会阻断 build/test。
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
# protocol-asset：assetProtocol enable 的编译期 feature 门，与 tauri.conf.json
# app.security.assetProtocol 对齐（缺则 tauri-build allowlist 校验失败，本地图
# 经 asset:// 协议加载所必需）。
tauri = { version = "=2.11.2", features = ["protocol-asset"] }
tauri-plugin-window-state = "=2.4.1"
tauri-plugin-store = "=2.4.3"
tauri-plugin-fs = "=2.5.1"
# 外链打开窄通道（RESEARCH Q2）。Tauri 官方 plugins-workspace 一方插件，
# 专责 open，capability 仅授 opener:allow-open-url，权限比 tauri-plugin-shell
# 更窄。来源/版本经 Task 1 阻塞门人工核验通过（crates.io 官方 workspace，精确 pin）。
tauri-plugin-opener = "=2.5.4"
# 原生文件/文件夹选择对话框（R4 §2 反转旧自绘决策）。Tauri 官方 plugins-workspace
# 一方插件，与 fs/opener/store 同仓同维护团队同 build.rs 机制（仅生成 permission
# schema，无 install hook）；底层经 rfd 调 OS 原生 IFileDialog。capability 仅授
# dialog:allow-open（最小权限，不开 save——另存为本阶段不做）。精确 pin（R4 供应链审过）。
tauri-plugin-dialog = "=2.7.1"
# #6 单实例：「打开方式」第二次启动时把 argv 转发给运行中的实例（聚焦 + open-file 事件），
# 而非另起一个 app 进程。Tauri 官方 plugins-workspace 一方插件，与 fs/opener/dialog 同仓同维护。
# 基础 init 无额外 feature（deep-link 集成本阶段不需）。精确 pin（供应链零信任）。
tauri-plugin-single-instance = "=2.4.2"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
# 结构化错误类型派生（git 模块 GitError 等）。纯 proc-macro，零运行时依赖。
thiserror = "=2.0.18"
# OS 凭据库（簇④）：GitHub Personal Access Token 安全存取。Windows=Credential Manager、
# macOS=Keychain、Linux=Secret Service。keyring 4.0 重构：keyring 提供 use_native_store 注册默认 store，
# Entry API 在 keyring-core。无 Cargo feature，平台 store 按 cfg 默认编入。
keyring = "=4.0.1"
keyring-core = "=1.0.0"
# 回收站删除（D-09）。Byron/trash-rs，跨平台。build.rs 审查见 02-03-SUMMARY。
trash = "=5.2.6"
# 防抖文件监听（FILE-02 watcher）。内捆 notify 7.x；裸 notify 不显式 pin，
# 经 notify_debouncer_full::notify 重导出访问类型（Pitfall 6，避免双 pin 冲突）。
notify-debouncer-full = "=0.7.0"
# Phase 4 W1 FTS5 索引（写侧）。sqlx 0.8.6 与 tauri-plugin-sql 2.4.0 的 ^0.8 经 Cargo.lock
# 收敛到同一节点 → 同一 libsqlite3-sys 0.30.1 → 零 links="sqlite3" 冲突（不引 rusqlite）。
sqlx = { version = "=0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
# 必须直接引并显式 bundled：sqlx 的 sqlite feature 不带 bundled，缺则 Windows 走系统链接失败。
# bundled build.rs 无条件带 -DSQLITE_ENABLE_FTS5（内捆 SQLite 3.46，FTS5/trigram 开箱）；钉死 0.30.1 防漂移。
libsqlite3-sys = { version = "=0.30.1", features = ["bundled"] }
# 写队列 mpsc：与 tauri 内捆 tokio 同版本节点，仅 union sync feature（不引新编译单元）。
tokio = { version = "=1.52.3", default-features = false, features = ["sync"] }
# 前端只读 SQL 查询通道（写全在 Rust，capability 仅授 sql:default 只读集）。
tauri-plugin-sql = { version = "=2.4.0", features = ["sqlite"] }
# 索引 path 键 NFC 规范化（跨平台一致：macOS 分解形与 Win/Linux 合成形统一）。
# rebuild 在 Rust 侧枚举文件，故 NFC 收口于 Rust（单一真相，autosave/watcher 路径同样经此）。纯数据表 crate。
unicode-normalization = "=0.1.24"
# Phase 6：原生 git（libgit2 绑定）。git2 0.21.0 实查 default= []，仅开 vendored-libgit2
# （cc 构建无需 cmake/make，跨机确定无系统依赖）。**不开 ssh/https**：
# - 实测 Windows 上 libgit2 vendored 的 libssh2（WinCNG backend）不支持 ed25519 密钥（用户密钥即 ed25519），
#   SSH 认证必失败；https feature 又会拉 openssl-sys（需 perl+make，本机缺）。
# - 故远程操作（clone/fetch/push/pull，W4）改走系统 git CLI sidecar（同 W3 commit 范式）——OpenSSH 原生
#   支持 ed25519 + ssh-agent + known_hosts，跨平台。git2 仅做本地读写（status/log/diff/checkout/reset/...）。
git2 = { version = "=0.21.0", default-features = false, features = [
    "vendored-libgit2",
] }
# GitHub PR 流程（GIT-07）：REST API 走 Rust，token 留 keyring 永不进 webview（XSS 面）。
# default-tls=Windows schannel（系统自带，免 OpenSSL/cmake/nasm，同 git2 避 vendored-openssl 思路）；
# json 用 serde 解析。注：reqwest 的 rustls feature 名是 `rustls` 非 `rustls-tls`，留作跨平台后续。
reqwest = { version = "=0.13.4", default-features = false, features = [
    "default-tls",
    "json",
] }
